Transformando a operação transaction em uma DB transaction em users. Removendo transactions2
