# app/app/Http/Controllers/UserController.php
@@ -8,6 +8,8 @@ use Illuminate\Http\Request;
 
 use Illuminate\Support\Facades\Http;
 
+use Illuminate\Support\Facades\DB;
+
 class UserController extends Controller
 {
     /**
@@ -94,7 +96,7 @@ class UserController extends Controller
     /**
     * @OA\Post(
 
-    *  path="/user/transaction2",
+    *  path="/user/transaction",
 
     *  tags={"Users"},
 
@@ -158,7 +160,7 @@ class UserController extends Controller
      * @param  \App\Models\User  $user
      * @return \Illuminate\Http\Response
      */
-    public function transaction2(Request $request)
+    public function transaction(Request $request)
     {
         $payer = User::find($request->payer);
         if ($payer === null) {
@@ -200,130 +202,23 @@ class UserController extends Controller
         if ($response2['message'] != 'Success'){
             return response()->json([
                 'message' => 'Fail 2nd Mock',
-            ]);
+            ], 400);
         }
 
-        $payee->total_value += $request->value;
-        $payee->save();
+        try {
+            DB::transaction(function () use ($request, $payee, $payer) {
+                $payee->total_value += $request->value;
+                $payee->save();
 
-        $payer->total_value -= $request->value;
-        $payer->save();
+                $payer->total_value -= $request->value;
+                $payer->save();
+            });
+        } catch (\Exception $e) {
+            return response()->json([
+                'message' => 'Error during the transaction.',
+            ], 400);
+        }
 
         return response()->json([new UserResource($payer), new UserResource($payee)], 200);
-    }
-
-    /**
-    * @OA\Post(
-
-    *  path="/user/transaction",
-
-    *  tags={"Users"},
-
-    *  summary="Money transferation between users",
-
-    *  @OA\Parameter(name="value",
-
-    *    in="query",
-
-    *    required=true,
-
-    *    @OA\Schema(type="number")
-
-    *  ),
-
-    *  @OA\Parameter(name="payer",
-
-    *    in="query",
-
-    *    required=true,
-
-    *    @OA\Schema(type="integer")
-
-    *  ),
-
-    *  @OA\Parameter(name="payee",
-
-    *    in="query",
-
-    *    required=true,
-
-    *    @OA\Schema(type="integer")
-
-    *  ),
-
-    *  @OA\Response(response="200",
-
-    *    description="Check success value. If it's true, the transfer is completed, also it returns the payer and payee attributes on a json format. If it's false, something went wrong with the transaction, check message for details.",
-
-    *  ),
-
-    *  @OA\Response(response="404",
-
-    *    description="Payer or payee not found",
-
-    *  ),
-
-    * )
-
-    */
-
-    /**
-     * Transaction
-     *
-     * @param  \App\Models\User  $user
-     * @return \Illuminate\Http\Response
-     */
-    public function transaction(Request $request)
-    {
-        $payer = User::findOrFail($request->payer);
-        $payee = User::findOrFail($request->payee);
-
-        if($payer->type == 'regular') {
-            if($payer->total_value - $request->value >= 0) {
-                $response = Http::get('https://run.mocky.io/v3/8fafdd68-a090-496f-8c9a-3442cf30dae6');
-                $response->json();
-                //var_dump($response['message']);
-                if ($response['message'] == 'Autorizado') {
-                    $response2 = Http::get('http://o4d9z.mocklab.io/notify');
-                    $response2->json();
-
-                    if ($response2['message'] == 'Success') {
-                        $payee->total_value += $request->value;
-                        $payee->save();
-
-                        $payer->total_value -= $request->value;
-                        $payer->save();
-
-                        return response()->json([
-                            'success' => 'true',
-                            'message' => [new UserResource($payer), new UserResource($payee)],
-                        ]);
-
-                        
-                    } else {
-                        return response()->json([
-                            'success' => 'false',
-                            'message' => 'Fail 2nd Mock',
-                        ]);
-                    }
-                } else {
-                    return response()->json([
-                        'success' => 'false',
-                        'message' => 'Fail 1st Mock',
-                    ]);
-                }
-            } else {
-                return response()->json([
-                    'success' => 'false',
-                    'message' => 'Not enough money',
-                ]);
-            }
-        } else {
-            return response()->json([
-                'success' => 'false',
-                'message' => 'Sellers are not allowed to send money',
-            ]);
-
-        }
     }
 }
